test/corpus/types.txt
========================================
Primitive types
========================================

char a;
int a;

---

(translation_unit
  (declaration (primitive_type) (identifier))
  (declaration (primitive_type) (identifier)))

========================================
Boolean types
========================================

_Bool a;
bool a;

---

(translation_unit
  (declaration (boolean_type) (identifier))
  (declaration (boolean_type) (identifier)))

========================================
Type modifiers
========================================

void f(float);
void f(double);
void f(long double);
void f(float _Complex);
void f(double _Complex);
void f(long double _Complex);
void f(unsigned);
void f(unsigned int);
void f(signed long int);
void f(unsigned v1);
void f(unsigned long v2);

---

(translation_unit
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier)))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier)))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier)))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier (complex_type))))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier (complex_type))))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier (complex_type))))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier)))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier (primitive_type))))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier (primitive_type))))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier) (identifier)))))
  (declaration
    (void_type)
    (function_declarator
      (identifier)
      (parameter_list (parameter_declaration (sized_type_specifier) (identifier))))))
